--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "create-widget": "sc-search new-widget"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@sitecore-search/react": "^2.0.0",
     "@sitecore-search/ui": "^2.0.0",
     "decompress": "^4.2.1",
@@ -27,14 +28,14 @@
     "react-router-dom": "^6.8.2",
     "react-select": "^5.7.0",
     "react-toggle-dark-mode": "^1.1.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@sitecore-search/cli": "^2.0.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "^5.1.28",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "5.8.1",
     "@vitejs/plugin-react": "^3.1.0",
