--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "@sitecore-search/react": "^2.0.0",
-    "@sitecore-search/ui": "^2.0.0",
+    "@sitecore-search/react": "2.1.1",
+    "@sitecore-search/ui": "2.1.1",
     "decompress": "^4.2.1",
     "decompress-targz": "^4.1.1",
     "eslint-config-standard": "^17.0.0",
@@ -28,14 +28,14 @@
     "react-router-dom": "^6.8.2",
     "react-select": "^5.7.0",
     "react-toggle-dark-mode": "^1.1.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@sitecore-search/cli": "^2.0.0",
+    "@sitecore-search/cli": "2.1.1",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@types/styled-components": "^5.1.28",
+    "@types/styled-components": "^5.1.31",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "5.8.1",
     "@vitejs/plugin-react": "^3.1.0",
