Created seperate components for Facets, Pagination, Sorting and Search results Introduced show more and show less functionality on facets. Added filtering functionality on Facets Added mechanism to append facets selection and page number in the query string so that Search URL can be shared with preseleted facets and page

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "printWidth": 120,
   "trailingComma": "all",
+  "endOfLine": "auto",
   "semi": true,
   "singleQuote": true,
   "quoteProps": "consistent",
