--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
-    "@sitecore-search/react": "2.1.1",
-    "@sitecore-search/ui": "2.1.1",
+    "@sitecore-search/react": "2.5.4-experimental-a5b0ce0b",
+    "@sitecore-search/ui": "2.5.4-experimental-a5b0ce0b",
     "decompress": "^4.2.1",
     "decompress-targz": "^4.1.1",
     "eslint-config-standard": "^17.0.0",
@@ -22,27 +22,30 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "fs-extra": "^11.1.1",
+    "lucide-react": "^0.436.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-select": "^5.7.0",
-    "react-toggle-dark-mode": "^1.1.1",
-    "styled-components": "^6.1.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@sitecore-search/cli": "2.1.1",
+    "@sitecore-search/cli": "2.5.4-experimental-a5b0ce0b",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.31",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "5.8.1",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.6.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.0.4",
-    "vite": "^4.3.9"
+    "vite": "5.2.6"
   }
 }
