--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "create-widget": "sc-search new-widget"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@sitecore-search/react": "2.5.4-experimental-a5b0ce0b",
     "@sitecore-search/ui": "2.5.4-experimental-a5b0ce0b",
