--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@sitecore-search/react": "2.5.4-experimental-a5b0ce0b",
-    "@sitecore-search/ui": "2.5.4-experimental-a5b0ce0b",
+    "@sitecore-search/react": "2.6.0-alpha.0",
+    "@sitecore-search/ui": "2.6.0-alpha.0",
     "decompress": "^4.2.1",
     "decompress-targz": "^4.1.1",
     "eslint-config-standard": "^17.0.0",
@@ -32,7 +32,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@sitecore-search/cli": "2.5.4-experimental-a5b0ce0b",
+    "@sitecore-search/cli": "2.6.0-alpha.0",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
